--- a/src/NHibernateBookCommunity.Persistence/NHibernateBookCommunity.Persistence.csproj
+++ b/src/NHibernateBookCommunity.Persistence/NHibernateBookCommunity.Persistence.csproj
@@ -65,6 +65,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Infrastructure\SessionFactorySingleton.cs" />
+    <Compile Include="Mapping\EntityIdComparer.cs" />
+    <Compile Include="Mapping\UserMappingSpecs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
