--- a/src/NHibernateBookCommunity.Console/NHibernateBookCommunity.Console.csproj
+++ b/src/NHibernateBookCommunity.Console/NHibernateBookCommunity.Console.csproj
@@ -2,18 +2,20 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{94D0BF62-CEC3-4B4D-82A4-6EBDE2682A23}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{EBAFA89D-09D1-4758-B3B7-1ECD1C4EFF09}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NHibernateBookCommunity.Persistence</RootNamespace>
-    <AssemblyName>NHibernateBookCommunity.Persistence</AssemblyName>
+    <RootNamespace>NHibernateBookCommunity.Console</RootNamespace>
+    <AssemblyName>NHibernateBookCommunity.Console</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,7 +24,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
+    <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -46,15 +49,6 @@
     <Reference Include="NHibernate.ByteCode.Castle">
       <HintPath>..\packages\NHibernate.Castle.3.1.0.4000\lib\Net35\NHibernate.ByteCode.Castle.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.5.9.10348\lib\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.mocks">
-      <HintPath>..\packages\NUnit.2.5.9.10348\lib\nunit.mocks.dll</HintPath>
-    </Reference>
-    <Reference Include="pnunit.framework">
-      <HintPath>..\packages\NUnit.2.5.9.10348\lib\pnunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -64,27 +58,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Infrastructure\AutoMappingConfiguration.cs" />
-    <Compile Include="Infrastructure\SessionFactorySingleton.cs" />
-    <Compile Include="Mapping\Conventions\ForeignKeyColumnNameConvention.cs" />
-    <Compile Include="Mapping\Conventions\HasManyConvention.cs" />
-    <Compile Include="Mapping\EntityIdComparer.cs" />
-    <Compile Include="Mapping\Overrides\ReviewMappingOverride.cs" />
-    <Compile Include="Mapping\UserMappingSpecs.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\Repository.cs" />
-    <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NHibernateBookCommunity.Domain\NHibernateBookCommunity.Domain.csproj">
       <Project>{66429F97-F975-48BA-87F8-5E7774E9480F}</Project>
       <Name>NHibernateBookCommunity.Domain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\NHibernateBookCommunity.Persistence\NHibernateBookCommunity.Persistence.csproj">
+      <Project>{94D0BF62-CEC3-4B4D-82A4-6EBDE2682A23}</Project>
+      <Name>NHibernateBookCommunity.Persistence</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
