--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\NHibernateBookCommunity.Persistence\packages.config" />
   <repository path="..\NHibernateBookCommunity.Domain\packages.config" />
+  <repository path="..\NHibernateBookCommunity.Console\packages.config" />
 </repositories>
