--- a/src/NHibernateBookCommunity.Persistence/NHibernateBookCommunity.Persistence.csproj
+++ b/src/NHibernateBookCommunity.Persistence/NHibernateBookCommunity.Persistence.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
+    <Compile Include="Repositories\UserRepositorySpecs.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NHibernateBookCommunity.Domain\NHibernateBookCommunity.Domain.csproj">
