Added classic nhibernate mapping and removed unnecessary files

--- a/src/NHibernateBookCommunity.Persistence/NHibernateBookCommunity.Persistence.csproj
+++ b/src/NHibernateBookCommunity.Persistence/NHibernateBookCommunity.Persistence.csproj
@@ -88,6 +88,13 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="hibernate.cfg.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <EmbeddedResource Include="Mapping\Review.hbm.xml" />
+    <EmbeddedResource Include="Mapping\User.hbm.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
