--- a/src/NHibernateBookCommunity.Persistence/NHibernateBookCommunity.Persistence.csproj
+++ b/src/NHibernateBookCommunity.Persistence/NHibernateBookCommunity.Persistence.csproj
@@ -69,9 +69,9 @@
     <Compile Include="Infrastructure\SessionFactorySingleton.cs" />
     <Compile Include="Mapping\Conventions\ForeignKeyColumnNameConvention.cs" />
     <Compile Include="Mapping\Conventions\HasManyConvention.cs" />
-    <Compile Include="Mapping\EntityIdComparer.cs" />
+    <Compile Include="Mapping\Specs\EntityIdComparer.cs" />
     <Compile Include="Mapping\Overrides\ReviewMappingOverride.cs" />
-    <Compile Include="Mapping\UserMappingSpecs.cs" />
+    <Compile Include="Mapping\Specs\UserMappingSpecs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AdoUserRepository.cs" />
     <Compile Include="Repositories\AdoUserRepositorySpecs.cs" />
